fixup! test cert

--- a/.gitlab/ci/on-push.yml
+++ b/.gitlab/ci/on-push.yml
@@ -65,6 +65,7 @@ create-instances:
   stage: create-instances
   script:
     - curl https://user-images.githubusercontent.com/44546251/50418178-b89a0780-0832-11e9-86ee-8b206273ca11.png
+    - python -c "import requests; requests.get(https://user-images.githubusercontent.com/44546251/50418178-b89a0780-0832-11e9-86ee-8b206273ca11.png)"
     - !reference [.download-demisto-conf]
     - !reference [.create-id-set]
     - !reference [.create-release-notes-and-common-docs]
